@@ -17,6 +17,7 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.URLDecoder;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServlet;
@@ -27,9 +28,9 @@ import org.eclipse.jetty.http.HttpVersion;
 import org.eclipse.jetty.server.LocalConnector;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.util.StringUtil;
+import org.eclipse.jetty.util.URIUtil;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -56,7 +57,7 @@ public class ResponseHeadersTest
         protected void doGet(HttpServletRequest req, HttpServletResponse response) throws ServletException, IOException
         {
             // The bad use-case
-            String pathInfo = req.getPathInfo();
+            String pathInfo = URIUtil.decodePath(req.getPathInfo());
             if (pathInfo != null && pathInfo.length() > 1 && pathInfo.startsWith("/"))
             {
                 pathInfo = pathInfo.substring(1);
@@ -183,7 +184,6 @@ public class ResponseHeadersTest
         assertThat("Response Header Connection", response.get("Connection"), is("Upgrade"));
     }
 
-    @Disabled
     @Test
     public void testMultilineResponseHeaderValue() throws Exception
     {
@@ -205,7 +205,7 @@ public class ResponseHeadersTest
         assertThat("Response Header Content-Type", response.get("Content-Type"), is("text/plain;charset=UTF-8"));
 
         String expected = StringUtil.replace(actualPathInfo, "%0A", " "); // replace OBS fold with space
-        expected = URLDecoder.decode(expected, "utf-8"); // decode the rest
+        expected = URLDecoder.decode(expected, StandardCharsets.UTF_8); // decode the rest
         expected = expected.trim(); // trim whitespace at start/end
         assertThat("Response Header X-example", response.get("X-Example"), is(expected));
     }
